--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@
 }
 
 
-@media only screen and (max-width: 1440px) {
+@media only screen and (min-width: 1440px) and (max-width: 3000px) {
     body{
         background-color: var(--Light-pink);
         display: flex;
@@ -210,6 +210,7 @@
         position: absolute;
         opacity: .2;
         margin-top: 32px;
+        margin-bottom: 12px;
     }
 
 
@@ -243,7 +244,7 @@
 
 
 
-@media only screen and (max-width: 375px) {
+@media only screen and (min-width: 375px) and (max-width: 1439px) {
     body{
         background-color: var(--Light-pink);
         display: flex;
